# suppary

./: .gitignore  README.md  pyproject.toml
supparize/: cli.py
supparize/slack/: clients.py  services.py
