[project]
name = "supparize"
version = "0.1.0"
description = "CLI tool to summarize your Slack threads"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "aiohttp>=3.11.11",
    "click>=8.1.7",
    "slack_sdk>=3.34.0",
]
requires-python = ">=3.12"

[project.scripts]
supparize = "supparize.cli:summarize"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
] 

[tool.hatch.build.targets.wheel]
packages = ["supparize"]
